--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,11 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install dependencies
+      - name: Install dependencies + test/lint tools
         run: |
           python -m pip install --upgrade pip setuptools wheel
-          pip install -r requirements.txt
+          # install runtime deps + testing & linting tools
+          pip install -r requirements.txt pytest flake8
 
       - name: Run tests
         run: |
@@ -31,5 +32,4 @@ jobs:
 
       - name: Lint
         run: |
-          pip install flake8
           flake8
